--- a/test/shorthand.expect.css
+++ b/test/shorthand.expect.css
@@ -1,6 +1,7 @@
 .shorthand {
-  /* padding: 80px 0.5 1 0.5; */
-  /* padding: 0.5 80px 0.5 1; */
-  /* padding: 1 0.5 80px 0.5; */
-  padding: 0.5 1 0.5 80px;
+  margin: 20px 40px 80px 40px;
+
+  padding-right: 40px;
+  padding-bottom: 20px;
+  padding-top: 80px;
 }
